--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,6 +8,10 @@
 
 name: Java CI with Maven
 
+permissions:
+  contents: write  # This grants write permissions to contents
+  packages: write  # Needed for creating a release
+
 on:
   push:
     branches: [ "main" ]
