--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -54,6 +54,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/CEMTRouting-0.0.1-SNAPSHOT.jar  # Replace with your actual jar file name
+          asset_path: target/CEMTRouting-*.jar  # Replace with your actual jar file name
           asset_name: CEMTRouting-0.0.1-SNAPSHOT.jar  # Replace with your actual jar file name
           asset_content_type: application/java-archive
