--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -49,7 +49,7 @@ jobs:
           prerelease: true
       - run: |
           ARTIFACT_PATHNAME=$(ls target/CEMTRouting-*.jar | head -n 1)
-          echo ::set-env name=ARTIFACT_NAME::${ARTIFACT_NAME}
+          echo "ARTIFACT_NAME=${ARTIFACT_PATHNAME}" >> $GITHUB_ENV
       - name: Upload JAR file to Release
         uses: actions/upload-release-asset@v1
         env:
