--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -49,13 +49,16 @@ jobs:
           prerelease: true
       - run: |
           ARTIFACT_PATHNAME=$(ls target/CEMTRouting-*.jar | head -n 1)
-          echo "ARTIFACT_NAME=${ARTIFACT_PATHNAME}" >> $GITHUB_ENV
+          ARTIFACT_NAME=$(basename $ARTIFACT_PATHNAME)
+          echo "ARTIFACT_NAME=${ARTIFACT_NAME}" >> $GITHUB_ENV
+          echo "ARTIFACT_PATHNAME=${ARTIFACT_PATHNAME}" >> $GITHUB_ENV
+
       - name: Upload JAR file to Release
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/${{ env.ARTIFACT_NAME }}  # Replace with your actual jar file name
+          asset_path: ${{ env.ARTIFACT_PATHNAME }}  # Replace with your actual jar file name
           asset_name: ${{ env.ARTIFACT_NAME }} # Replace with your actual jar file name
           asset_content_type: application/java-archive
