--- a/.github/workflows/trigger-maven.yml
+++ b/.github/workflows/trigger-maven.yml
@@ -3,6 +3,7 @@ name: Trigger Maven Repository Update
 on:
   release:
     types: [published]
+  workflow_dispatch:
 
 jobs:
   trigger-maven-deploy:
